@@ -1,10 +1,9 @@
 package org.monarchinitiative.lirical.likelihoodratio;
 
-import com.google.common.collect.ImmutableList;
-
-import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.monarchinitiative.lirical.TestResources;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoAnnotation;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoDisease;
 import org.monarchinitiative.phenol.ontology.data.TermId;
@@ -12,7 +11,10 @@ import org.monarchinitiative.phenol.ontology.data.TermId;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -23,54 +25,53 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
  * https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2683447/ (Likelihood ratio calculations)
  * Note -- the authors of that paper rounded results and this class does not!
  */
-class TestResultTest {
+public class TestResultTest {
 
     private static final double EPSILON = 0.00001;
     private static double ratio(double sensitivity, double specificity) {
         return sensitivity/(1.0 - specificity);
     }
+
+    private static LrWithExplanationFactory FACTORY;
     private HpoDisease glaucoma;
 
     private TestResult tresultNoGenotype;
     private TestResult tresultWithGenotype;
 
-    @BeforeEach
-    void init() {
-        TermId glaucomaId = TermId.of("MONDO:123");
-        List<TermId> emptyList = ImmutableList.of();
-        List<HpoAnnotation> emptyAnnot = ImmutableList.of();
-        glaucoma = new HpoDisease("Glaucoma",glaucomaId,emptyAnnot,emptyList,emptyList,emptyList,emptyList);
+    @BeforeAll
+    public static void beforeAll() {
+        FACTORY = new LrWithExplanationFactory(TestResources.hpo());
+    }
 
-        TermId testId1 = TermId.of("MONDO:1");
-        TermId testId2 = TermId.of("MONDO:2");
-        TermId testId3 = TermId.of("MONDO:3");
-        HpoDisease d1 = new HpoDisease("d1",testId1,emptyAnnot,emptyList,emptyList,emptyList,emptyList);
-        HpoDisease d2 = new HpoDisease("d2",testId2,emptyAnnot,emptyList,emptyList,emptyList,emptyList);
-        HpoDisease d3 = new HpoDisease("d3",testId3,emptyAnnot,emptyList,emptyList,emptyList,emptyList);
-        List<Double> list1 = ImmutableList.of(2.0,3.0,4.0);
-        List<Double> list2 = ImmutableList.of(20.0,3.0,4.0);
-        List<Double> list3 = ImmutableList.of(20.0,30.0,4.0);
-        ImmutableList<Double> excluded = ImmutableList.of();
+    @BeforeEach
+    public void init() {
+        TermId glaucomaId = TermId.of("MONDO:123");
+        List<TermId> emptyList = List.of();
+        List<HpoAnnotation> emptyAnnot = List.of();
+        glaucoma = HpoDisease.of(glaucomaId, "Glaucoma",emptyAnnot,emptyList,emptyList,emptyList,emptyList);
+
+        HpoDisease d1 = HpoDisease.of(TermId.of("MONDO:1"), "d1",emptyAnnot,emptyList,emptyList,emptyList,emptyList);
+
+        TermId some = TermId.of("HP:0000006");
+        List<LrWithExplanation> list1 = createTestList(some, 2.0, 3.0, 4.0);
+        List<LrWithExplanation> excluded = List.of();
         double prevalence = 0.025;
-        TermId geneId =  TermId.of("FAKE:123");
-        double genotypeLR=2.0;
-        tresultWithGenotype = new TestResult(list1,excluded,d1,genotypeLR,geneId,prevalence);
-        tresultNoGenotype = new TestResult(list1,excluded,d1,prevalence);
+        GenotypeLrWithExplanation genotypeLr = GenotypeLrWithExplanation.of(TermId.of("FAKE:123"), 2.0, "Explanation");
+        tresultWithGenotype = TestResult.of(list1,excluded,d1, prevalence, genotypeLr);
+        tresultNoGenotype = TestResult.of(list1,excluded,d1,prevalence, null);
     }
 
     @Test
-    void testGlaucomaLR1() {
+    public void testGlaucomaLR1() {
         TestResult tresult;
 
-        ImmutableList.Builder<Double> builder = new ImmutableList.Builder<>();
-        ImmutableList<Double> excluded = ImmutableList.of();
         // The prevalence of glaucoma is 2.5%
         double prevalence = 0.025;
         // test #1
         // we obtain a test result with 60% sensitivity and 97% specifity
-        double LR1 = ratio(0.60, 0.97);
-        builder.add(LR1);
-        tresult = new TestResult(builder.build(), excluded,glaucoma,prevalence);
+        TermId some = TermId.of("HP:0000006");
+        LrWithExplanation LR1 = FACTORY.create(some, some, LrMatchType.EXACT_MATCH, ratio(0.60, 0.97));
+        tresult = TestResult.of(List.of(LR1), List.of(), glaucoma,prevalence, null);
         // There should be a LR of 20 after just one test
         assertEquals(1, tresult.getNumberOfTests());
         // There should be a LR of 20
@@ -90,20 +91,18 @@ class TestResultTest {
     }
 
     @Test
-    void testGlaucomaLR2() {
+    public void testGlaucomaLR2() {
         TestResult tresult;
-        ImmutableList.Builder<Double> builder = new ImmutableList.Builder<>();
-        ImmutableList<Double> excluded = ImmutableList.of();
+
         // The prevalence of glaucoma is 2.5%
         double prevalence = 0.025;
         // We now do two tests. The first test is the same as above
-        double LR1 = ratio(0.60, 0.97);
-        builder.add(LR1);
+        TermId some = TermId.of("HP:0000006");
+        LrWithExplanation LR1 = FACTORY.create(some, some, LrMatchType.EXACT_MATCH, ratio(0.60, 0.97));
         // The other test is intraocular pressure (IOP)
         // IOP: (50% sensitivity and 92% specificity[9])
-        double LR2 = ratio(0.50, 0.92);
-        builder.add(LR2);
-        tresult = new TestResult(builder.build(),excluded, glaucoma,prevalence);
+        LrWithExplanation LR2 = FACTORY.create(some, some, LrMatchType.EXACT_MATCH, ratio(0.50, 0.92));
+        tresult = TestResult.of(List.of(LR1, LR2), List.of(), glaucoma,prevalence, null);
         // the pretest odds are the same as with the first test because they are based only on
         // the population prevalence.
         double expectedPretestOdds = 0.02564103;
@@ -116,23 +115,19 @@ class TestResultTest {
 
 
     @Test
-    void testCompositepositiveLR() {
+    public void testCompositepositiveLR() {
         TestResult tresult;
-        ImmutableList.Builder<Double> builder = new ImmutableList.Builder<>();
-        ImmutableList<Double> excluded = ImmutableList.of();
         // The prevalence of glaucoma is 2.5%
         double prevalence = 0.025;
         //IOP test
         double LR1 = ratio(0.5,0.92);
-        builder.add(LR1);
         //Dic
         double LR2 = ratio(0.60, 0.97);
-        builder.add(LR2);
         //GDx
         double LR3 = ratio(0.60, 0.97);
-        builder.add(LR3);
 
-        tresult = new TestResult(builder.build(),excluded,glaucoma,prevalence);
+        List<LrWithExplanation> lr1 = createTestList(TermId.of("HP:0000006"), LR1, LR2, LR3);
+        tresult = TestResult.of(lr1, List.of(),glaucoma,prevalence, null);
          //PretestOdds = pretest prob / (1-pretest prob) = 0.95 / 0.05 = 19.0
         double expectedPretestOdds = 0.0256410;
         assertEquals(expectedPretestOdds, tresult.pretestodds(), EPSILON);
@@ -149,24 +144,26 @@ class TestResultTest {
 
 
     @Test
-    void testTestResultSorting() {
+    public void testTestResultSorting() {
 
         TermId testId1 = TermId.of("MONDO:1");
         TermId testId2 = TermId.of("MONDO:2");
         TermId testId3 = TermId.of("MONDO:3");
-        List<TermId> emptyList = ImmutableList.of();
-        List<HpoAnnotation> emptyAnnot = ImmutableList.of();
-        HpoDisease d1 = new HpoDisease("d1",testId1,emptyAnnot,emptyList,emptyList,emptyList,emptyList);
-        HpoDisease d2 = new HpoDisease("d2",testId2,emptyAnnot,emptyList,emptyList,emptyList,emptyList);
-        HpoDisease d3 = new HpoDisease("d3",testId3,emptyAnnot,emptyList,emptyList,emptyList,emptyList);
-        List<Double> list1 = ImmutableList.of(2.0,3.0,4.0);
-        List<Double> list2 = ImmutableList.of(20.0,3.0,4.0);
-        List<Double> list3 = ImmutableList.of(20.0,30.0,4.0);
-        ImmutableList<Double> excluded = ImmutableList.of();
+        List<TermId> emptyList = List.of();
+        List<HpoAnnotation> emptyAnnot = List.of();
+        HpoDisease d2 = HpoDisease.of(testId2,"d2",emptyAnnot,emptyList,emptyList,emptyList,emptyList);
+        HpoDisease d1 = HpoDisease.of(testId1,"d1",emptyAnnot,emptyList,emptyList,emptyList,emptyList);
+        HpoDisease d3 = HpoDisease.of(testId3,"d3",emptyAnnot,emptyList,emptyList,emptyList,emptyList);
+
+        TermId some = TermId.of("HP:0000006");
+        List<LrWithExplanation> list1 = createTestList(some, 2.0, 3.0, 4.0);
+        List<LrWithExplanation> list2 = createTestList(some, 20.0, 3.0, 4.0);
+        List<LrWithExplanation> list3 = createTestList(some, 20.0, 30.0, 4.0);;
+        List<LrWithExplanation> excluded = List.of();
         double prevalence = 0.025;
-        TestResult result1 = new TestResult(list1,excluded,d1,prevalence);
-        TestResult result2 = new TestResult(list2,excluded,d2,prevalence);
-        TestResult result3 = new TestResult(list3,excluded,d3,prevalence);
+        TestResult result1 = TestResult.of(list1,excluded,d1,prevalence, null);
+        TestResult result2 = TestResult.of(list2,excluded,d2,prevalence, null);
+        TestResult result3 = TestResult.of(list3,excluded,d3,prevalence, null);
         assertEquals(24.0,result1.getCompositeLR(),EPSILON);
         assertEquals(240.0,result2.getCompositeLR(),EPSILON);
         assertEquals(2400.0,result3.getCompositeLR(),EPSILON);
@@ -183,60 +180,52 @@ class TestResultTest {
         // The ranks of the objects get set in the evaluate method of HpoCase so cannot be tested here.
         // now add another test result, same as result3 but with additional genotype evidence
         // result4 should now be the top hit
-        double genotypeLR=2.0;
-        TermId geneId=TermId.of("NCBI:Fake");
-        TestResult result4=new TestResult(list3,excluded,d3,genotypeLR,geneId,prevalence);
+        GenotypeLrWithExplanation genotypeLr = GenotypeLrWithExplanation.of(TermId.of("NCBI:Fake"), 2.0, "Explanation");
+        TestResult result4= TestResult.of(list3,excluded,d3, prevalence, genotypeLr);
         lst.add(result4);
         assertEquals(lst.get(3),result4);
         lst.sort(Comparator.reverseOrder());
         assertEquals(lst.get(0),result4);
     }
 
-
-    @Test
-    void testHasGenotype() {
-        assertTrue(tresultWithGenotype.hasGenotype());
-        assertFalse(tresultNoGenotype.hasGenotype());
-    }
-
-
-    @Test
-    void testGetGenotypeLR() {
-        double expected=2.0;
-        assertEquals(expected,tresultWithGenotype.getGenotypeLR(),EPSILON);
-    }
-
-    @Test
-    void testNoGenotypeThrows() {
-        // We should never try to access the genotype LR if no genotype was tested
-        // and so the method throws an exception
-        Assertions.assertThrows(NullPointerException.class, () ->
-            assertEquals(1.0,tresultNoGenotype.getGenotypeLR(),EPSILON)
+    private List<LrWithExplanation> createTestList(TermId termId, double lr1, double lr2, double lr3) {
+        return List.of(
+                FACTORY.create(termId, termId, LrMatchType.EXACT_MATCH, lr1),
+                FACTORY.create(termId, termId, LrMatchType.EXACT_MATCH, lr2),
+                FACTORY.create(termId, termId, LrMatchType.EXACT_MATCH, lr3)
         );
     }
 
+
     @Test
-    void testHasExplanation() {
-        assertFalse(tresultNoGenotype.hasGenotypeExplanation());
-        tresultNoGenotype.setGenotypeExplanation("nonsense");
-        assertTrue(tresultNoGenotype.hasGenotypeExplanation());
-        assertEquals("nonsense",tresultNoGenotype.getGenotypeExplanation());
+    public void testHasGenotype() {
+        assertTrue(tresultWithGenotype.genotypeLr().isPresent());
+        assertFalse(tresultNoGenotype.genotypeLr().isPresent());
+    }
+
+
+    @Test
+    public void testGetGenotypeLR() {
+        double expected=2.0;
+        Optional<GenotypeLrWithExplanation> genotypeLr = tresultWithGenotype.genotypeLr();
+        assertThat(genotypeLr.isPresent(), equalTo(true));
+        assertEquals(expected,genotypeLr.get().lr(),EPSILON);
     }
 
     @Test
-    void testGetDiseaseCurie() {
+    public void testGetDiseaseCurie() {
         TermId diseaseCurie = TermId.of("MONDO:1"); // we used this in the init function to create tresultNoGenotype
-        assertEquals(diseaseCurie,tresultNoGenotype.getDiseaseCurie());
+        assertEquals(diseaseCurie,tresultNoGenotype.diseaseId());
     }
 
     @Test
-    void testGetDiseaseName() {
+    public void testGetDiseaseName() {
         String name="d1"; // set in init() function
         assertEquals(name,tresultNoGenotype.getDiseaseName());
     }
 
     @Test
-    void testObservedPhenotypeRatio() {
+    public void testObservedPhenotypeRatio() {
         // we used  List<Double> list1 = ImmutableList.of(2.0,3.0,4.0); in the init function
         assertEquals(2.0,tresultNoGenotype.getObservedPhenotypeRatio(0),EPSILON);
         assertEquals(3.0,tresultNoGenotype.getObservedPhenotypeRatio(1),EPSILON);
@@ -244,15 +233,17 @@ class TestResultTest {
     }
 
     @Test
-    void testGetPretestProb() {
+    public void testGetPretestProb() {
         double expected = 0.025;  // in init() we have  double prevalence = 0.025;
         assertEquals(expected,tresultNoGenotype.getPretestProbability(),EPSILON);
     }
 
     @Test
-    void testGetEntrezGeneId() {
+    public void testGetEntrezGeneId() {
         TermId expected=TermId.of("FAKE:123");
-        assertEquals(expected,tresultWithGenotype.getEntrezGeneId());
+        Optional<GenotypeLrWithExplanation> genotypeLr = tresultWithGenotype.genotypeLr();
+        assertThat(genotypeLr.isPresent(), equalTo(true));
+        assertEquals(expected,genotypeLr.get().geneId());
     }
 
 
