@@ -2,9 +2,12 @@ package org.monarchinitiative.lirical.svg;
 
 
 
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.monarchinitiative.lirical.TestResources;
+import org.monarchinitiative.lirical.likelihoodratio.LrMatchType;
+import org.monarchinitiative.lirical.likelihoodratio.LrWithExplanation;
+import org.monarchinitiative.lirical.likelihoodratio.LrWithExplanationFactory;
 import org.monarchinitiative.lirical.likelihoodratio.TestResult;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoAnnotation;
 import org.monarchinitiative.phenol.annotations.formats.hpo.HpoDisease;
@@ -16,28 +19,31 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 
-class Posttest2SvgTest {
+public class Posttest2SvgTest {
 
+    private static LrWithExplanationFactory FACTORY;
 
     private static List<TestResult> results;
 
     @BeforeAll
-    static void setup() throws NullPointerException {
-        final double PRETEST_PROB = 0.001;
+    public static void setup() throws NullPointerException {
+        double PRETEST_PROB = 0.001;
+        FACTORY = new LrWithExplanationFactory(TestResources.hpo());
         results = new ArrayList<>();
         //result 1
-        List<Double> reslist = ImmutableList.of(1d, 10d, 100d);
-        List<Double> excluded = ImmutableList.of();
-        List<HpoAnnotation> annotations = ImmutableList.of();
-        List<TermId> terms = ImmutableList.of();
-        HpoDisease d1 = new HpoDisease("DISEASE 1", TermId.of("MONDO:1"),annotations,terms,terms,terms,terms);
-        TestResult result1 = new TestResult(reslist,excluded,d1,PRETEST_PROB);
-        List<Double> reslist2 = ImmutableList.of(10d,100d,1000d);
-        HpoDisease d2 = new HpoDisease("DISEASE 2", TermId.of("MONDO:1"),annotations,terms,terms,terms,terms);
-        TestResult result2 = new TestResult(reslist2,excluded,d2,PRETEST_PROB);
-        List<Double> reslist3 = ImmutableList.of(1d,0.1d,0.01d);
-        HpoDisease d3 = new HpoDisease("DISEASE3", TermId.of("MONDO:3"),annotations,terms,terms,terms,terms);
-        TestResult result3 = new TestResult(reslist3,excluded,d3,PRETEST_PROB);
+        TermId some = TermId.of("HP:0000006");
+        List<LrWithExplanation> reslist = createTestList(some, 1d, 10d, 100d);
+        List<LrWithExplanation> excluded = List.of();
+        List<HpoAnnotation> annotations = List.of();
+        List<TermId> terms = List.of();
+        HpoDisease d1 = HpoDisease.of(TermId.of("MONDO:1"), "DISEASE 1",annotations,terms,terms,terms,terms);
+        TestResult result1 = TestResult.of(reslist,excluded,d1,PRETEST_PROB, null);
+        List<LrWithExplanation> reslist2 = createTestList(some, 10d,100d,1000d);
+        HpoDisease d2 = HpoDisease.of(TermId.of("MONDO:1"), "DISEASE 2", annotations,terms,terms,terms,terms);
+        TestResult result2 = TestResult.of(reslist2,excluded,d2,PRETEST_PROB, null);
+        List<LrWithExplanation> reslist3 = createTestList(some, 1d,0.1d,0.01d);
+        HpoDisease d3 = HpoDisease.of(TermId.of("MONDO:3"), "DISEASE3", annotations,terms,terms,terms,terms);
+        TestResult result3 = TestResult.of(reslist3,excluded,d3,PRETEST_PROB, null);
         results.add(result1);
         results.add(result2);
         results.add(result3);
@@ -46,7 +52,7 @@ class Posttest2SvgTest {
 
 
     @Test
-    void testConstructor() {
+    public void testConstructor() {
         double threshold = 0.02;
         int numtoshow = 3;
         Posttest2Svg p2svg = new Posttest2Svg(results, threshold,numtoshow);
@@ -54,12 +60,20 @@ class Posttest2SvgTest {
     }
 
     @Test
-    void testNumberOfDiffsToShow() {
+    public void testNumberOfDiffsToShow() {
         double threshold = 0.02;
         int numtoshow = 3;
         Posttest2Svg p2svg = new Posttest2Svg(results, threshold,numtoshow);
         assertEquals(3, p2svg.getNumDifferentialsToShowSVG());
        String svg = p2svg.getSvgString();
        assertFalse(svg.isEmpty());
+    }
+
+    private static List<LrWithExplanation> createTestList(TermId termId, double lr1, double lr2, double lr3) {
+        return List.of(
+                FACTORY.create(termId, termId, LrMatchType.EXACT_MATCH, lr1),
+                FACTORY.create(termId, termId, LrMatchType.EXACT_MATCH, lr2),
+                FACTORY.create(termId, termId, LrMatchType.EXACT_MATCH, lr3)
+        );
     }
 }
